--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "prod": "pm2 start dist/index.js",
-    "dev": "nodemon dist/index.js",
+    "prod": "pm2 start dist/banana-planet.js --watch",
+    "dev": "nodemon dist/banana-planet.js",
     "watch": "tsc -w"
   },
   "dependencies": {
