--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "prod": "pm2 start dist/index.js --watch",
+    "prod": "pm2 start dist/index.js",
     "dev": "nodemon dist/index.js",
     "watch": "tsc -w"
   },
